<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="32dp"
			android:orientation="vertical"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="32dp">

			<TextView
				android:id="@+id/result_basic"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif"
				android:gravity="end"
				android:paddingRight="32dp"
				android:text="00.00"
				android:textAppearance="@style/TextAppearance.AppCompat.Large" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:gravity="top">

				<Button
					android:id="@+id/clear_button_basic"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="@string/clear_button_basic"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF"
					android:textColorLink="@color/colorAccent" />

				<Button
					android:id="@+id/all_clear_button_basic"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="@string/all_clear_button_basic"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF"
					android:textColorLink="@color/colorAccent" />

				<Button
					android:id="@+id/negative_button_basic"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="@string/negative_button_basic"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF"
					android:textColorLink="@color/colorAccent" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<Button
					android:id="@+id/sin_button_advanced"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="sin"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF" />

				<Button
					android:id="@+id/cos_button_advanced"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="cos"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF" />

				<Button
					android:id="@+id/tan_button_advanced"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="tan"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF" />

				<Button
					android:id="@+id/ln_button_advanced"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="ln"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<Button
					android:id="@+id/sqrt_button_advanced"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="sqrt"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF" />

				<Button
					android:id="@+id/square_button_advanced"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="x^2"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF" />

				<Button
					android:id="@+id/power_button_advanced"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="x^y"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF" />

				<Button
					android:id="@+id/log_button_advanced"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#3F51B5"
					android:fontFamily="sans-serif"
					android:text="log"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="#FFFFFF" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:baselineAligned="false">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<Button
						android:id="@+id/button7_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button7_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />

					<Button
						android:id="@+id/button4_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button4_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />

					<Button
						android:id="@+id/button1_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button1_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />

					<Button
						android:id="@+id/button0_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button0_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<Button
						android:id="@+id/button8_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button8_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />

					<Button
						android:id="@+id/button5_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button5_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />

					<Button
						android:id="@+id/button2_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button2_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />

					<Button
						android:id="@+id/dot_button_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/dot_button_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<Button
						android:id="@+id/button9_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button9_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />

					<Button
						android:id="@+id/button6_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button6_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />

					<Button
						android:id="@+id/button3_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/button3_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />

					<Button
						android:id="@+id/equality_button_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#EAEAEA"
						android:fontFamily="sans-serif"
						android:text="@string/equality_button_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<Button
						android:id="@+id/divide_button_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#3F51B5"
						android:fontFamily="sans-serif"
						android:text="@string/divide_button_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large"
						android:textColor="#FFFFFF" />

					<Button
						android:id="@+id/multiply_button_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#3F51B5"
						android:fontFamily="sans-serif"
						android:text="@string/multiply_button_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large"
						android:textColor="#FFFFFF" />

					<Button
						android:id="@+id/subtract_button_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#3F51B5"
						android:fontFamily="sans-serif"
						android:text="@string/subtract_button_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large"
						android:textColor="#FFFFFF" />

					<Button
						android:id="@+id/add_button_basic"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="#3F51B5"
						android:fontFamily="sans-serif"
						android:text="@string/add_button_basic"
						android:textAppearance="@style/TextAppearance.AppCompat.Large"
						android:textColor="#FFFFFF" />
				</LinearLayout>
			</LinearLayout>

		</LinearLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>