<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/basic_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:text="@string/basic_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/advanced_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:text="@string/advanced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basic_button" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advanced_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_button"
        tools:text="Exit" />
</androidx.constraintlayout.widget.ConstraintLayout>